@@ -30,7 +30,7 @@ libxml-2.0 >= 2.4.12
 gtk+-2.0 >= 1.3.14
 libglade-2.0 >= 1.99.7
 libgnomecanvas-2.0 >= 1.110.0
-gal-2.0 >= 0.0.1
+gal-2.0 >= 0.0.2
 libgnome-2.0 >= 1.105.0
 libgnomeui-2.0 >= 1.106.0
 libgnomeprint-2.0 >= 1.106.0
