@@ -1,3 +1,7 @@
+2002-03-11  Jody Goldberg <jody@gnome.org>
+
+	* dialog-cell-format.c : changes to color combo.
+
 2002-03-10  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.1
